--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,9 @@ html {
   top: 20%;
   left: 50%;
   padding: 20px;
+  height: 100%;
   transform: translate(-50%, 0);
+  background-filter: blur(10px)
 }
 body {
   box-sizing: border-box;
